--- a/hospital-administration/src/main/resources/templates/index.html
+++ b/hospital-administration/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
 <nav>
   <ul>
-    <a href="/doctors">All Doctors</a>
+    <a href="/doctors">Doctors</a>
     <a href="/patients">Patients</a>
     <a href="/appointments">Appointments</a>
   </ul>
