--- a/hospital-administration/src/main/resources/templates/doctors/create.html
+++ b/hospital-administration/src/main/resources/templates/doctors/create.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success">
+        <input type="submit" value="Add" class="btn btn-success">
     </div>
 </form>
 </body>
