--- a/hospital-administration/src/main/resources/templates/fragments.html
+++ b/hospital-administration/src/main/resources/templates/fragments.html
@@ -16,12 +16,13 @@
 
 <nav th:fragment="header">
   <h1 th:text="${title}">Hospital Administration</h1>
+
 <!--  <ul class="nav" style="float:right;">-->
 <!--    <li class="nav-item"><a class="nav-link" href="/login">SignIn</a></li>-->
 <!--  </ul>-->
-  <ul class="nav" style="float:right;">
-    <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
-  </ul>
+<!--  <ul class="nav" style="float:right;">-->
+<!--    <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>-->
+<!--  </ul>-->
 </nav>
 </body>
 </html>
