--- a/hospital-administration/src/main/resources/templates/doctors/create.html
+++ b/hospital-administration/src/main/resources/templates/doctors/create.html
@@ -1,26 +1,60 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
+<!--<head th:replace="fragments :: head"></head>-->
+<!--<body class="container">-->
+
+<!--<header th:replace="fragments :: header"></header>-->
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-<body class="container">
+<html xmlns:th="http://www.thymeleaf.org/">
 
-<header th:replace="fragments :: header"></header>
+<head th:fragment="head">
 
-<form method="post">
-    <div class="form-group">
-        <label>Name
-              <input th:field="${doctors.doctorName}" class="form-control">
-        </label>
-        <p class="error" th:errors="${doctors.doctorName}"></p>
+    <!-- Bootstrap stylesheets and script -->
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
+    <link th:href="@{/css/hospitaladministration.css}" rel="stylesheet" />
+    <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 
-        <label> Speciality
-            <input th:field="${doctors.doctorSpeciality}" class="form-control">
-        </label>
-        <p class="error" th:errors="${doctors.doctorSpeciality}"></p>
+    <title th:text="'Hospital Administration' + ${title == null ? '' : ' :: ' + title}">Hospital Administration</title>
+</head>
+
+<body>
+<div th:fragment="navigation-menu" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a th:href="@{/}" class="navbar-brand">Hospital Administration</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/doctors}">Doctors</a></li>
+                <li><a th:href="@{/patients}">Patients</a></li>
+                <li><a th:href="@{/appointments}">Appointments</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout" th:href="@{/logout}">Log out</a></li>
+            </ul>
+        </div>
     </div>
+</div>
+<div class="container body-content">
 
-    <div class="form-group">
-        <input type="submit" value="Add" class="btn btn-success">
-    </div>
-</form>
+    <form method="post">
+        <div class="form-group">
+            <label>Name
+                  <input th:field="${doctors.doctorName}" class="form-control">
+            </label>
+            <p class="error" th:errors="${doctors.doctorName}"></p>
+
+            <label> Speciality
+                <input th:field="${doctors.doctorSpeciality}" class="form-control">
+            </label>
+            <p class="error" th:errors="${doctors.doctorSpeciality}"></p>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Add" class="btn btn-success">
+        </div>
+    </form>
+</div>
 </body>
 </html>
