--- a/hospital-administration/src/main/resources/templates/index.html
+++ b/hospital-administration/src/main/resources/templates/index.html
@@ -1,15 +1,48 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-<header th:replace="fragments :: header"></header>
-<body class="container">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org/">-->
+<!--<head th:replace="fragments :: head"></head>-->
+<!--<header th:replace="fragments :: header"></header>-->
+<!--<body class="container">-->
 
-<nav>
-  <ul>
-    <a href="/doctors">Doctors</a>
-    <a href="/patients">Patients</a>
-    <a href="/appointments">Appointments</a>
-  </ul>
-</nav>
+<!--<nav th:fragment = "navigation-menu">-->
+<!--  <ul>-->
+<!--    <li><a href="/doctors">Doctors</a></li>-->
+<!--    <li><a href="/patients">Patients</a></li>-->
+<!--    <li><a href="/appointments">Appointments</a></li>-->
+<!--  </ul>-->
+<!--</nav>-->
+
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org/">
+
+<head th:fragment="head">
+
+  <!-- Bootstrap stylesheets and script -->
+  <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
+  <link th:href="@{/css/hospitaladministration.css}" rel="stylesheet" />
+  <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+
+  <title th:text="'Hospital Administration' + ${title == null ? '' : ' :: ' + title}">Hospital Administration</title>
+</head>
+
+<body>
+<div th:fragment="navigation-menu" class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <a th:href="@{/}" class="navbar-brand">Hospital Administration</a>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a th:href="@{/doctors}">Doctors</a></li>
+        <li><a th:href="@{/patients}">Patients</a></li>
+        <li><a th:href="@{/appointments}">Appointments</a></li>
+      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/logout" th:href="@{/logout}">Log out</a></li>
+        </ul>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
