--- a/hospital-administration/src/main/resources/templates/appointments/index.html
+++ b/hospital-administration/src/main/resources/templates/appointments/index.html
@@ -76,9 +76,9 @@
 <div class="container body-content">
     <nav>
         <ul>
-            <li><a href="/view-all-appts">Click here to view all the appointments</a></li>
-            <li><a href="/view-appts-by-doctor">Click here to view appointments by doctors</a></li>
-            <li><a href="/view-appts-by-patient">Click here to view appointments by patients</a></li>
+            <li><a href="/appointments/view-all-appts">View all the appointments</a></li>
+            <li><a href="/appointments/view-appts-by-doctor">View appointments by doctors</a></li>
+            <li><a href="/appointments/view-appts-by-patient">View appointments by patients</a></li>
         </ul>
     </nav>
 
