--- a/hospital-administration/src/main/resources/templates/appointments/view-all-appts.html
+++ b/hospital-administration/src/main/resources/templates/appointments/view-all-appts.html
@@ -43,7 +43,7 @@
         <thead>
         <tr>
             <th>ID</th>
-            <th>Appointment Date</th>
+            <th>Appointment Date & Time</th>
             <th>Patient Name</th>
             <th>Doctor Name</th>
             <th>Reason for Visit</th>
@@ -53,8 +53,8 @@
         <tr th:each="appointment : ${appointments}">
             <td th:text="${appointment.id}"></td>
                     <td th:text="${appointment.apptDate}"></td>
-                    <td th:text="${appointment.patientName}"></td>
-                    <td th:text="${appointment.doctorName}"></td>
+                    <td th:text="${appointment.patients.patientName}"></td>
+                    <td th:text="${appointment.doctors.doctorName}"></td>
                     <td th:text="${appointment.complaint}"></td>
         </tr>
 
