--- a/hospital-administration/src/main/resources/templates/appointments/edit.html
+++ b/hospital-administration/src/main/resources/templates/appointments/edit.html
@@ -30,7 +30,29 @@
     </div>
 </div>
 <div class="container body-content">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Appointment Date & Time</th>
+            <th>Patient Name</th>
+            <th>Doctor Name</th>
+            <th>Reason for Visit</th>
+        </tr>
+        </thead>
 
-
-
+        <tr th:each="appointment : ${appointments}">
+            <td th:text="${appointment.id}"></td>
+            <td th:text="${appointment.apptDate}"></td>
+            <td th:text="${appointment.patients.patientName}"></td>
+            <td th:text="${appointment.doctors.doctorName}"></td>
+            <td th:text="${appointment.complaint}"></td>
+            <td>
+                <a th:href="@{/appointments/edit/{id}(id=${appointment.id})}">Edit</a>
+<!--                <input type="checkbox" name="appointmentIds" th:value="${appointment.id}" class="form-control">-->
+            </td>
+        </tr>
+    </table>
 </div>
+</body>
+</html>
