--- a/hospital-administration/src/main/resources/templates/index.html
+++ b/hospital-administration/src/main/resources/templates/index.html
@@ -43,6 +43,25 @@
     </div>
   </div>
 </div>
+<div class="container body-content">
 
+  <h1> WELCOME TO ABC MULTI SPECIALITY HOSPITAL</h1>
+  <h4> You have logged in as an admin!! In this role, you have the necessary privileges for the following activities in this app.</h4>
+  <ul>
+    <li>Add a new doctor Information. </li>
+    <li> Edit a doctor Information.</li>
+    <li>Delete a doctor Information.</li>
+    <li>Add a new patient Information.</li>
+    <li>Edit a patient information.</li>
+    <li>Delete a Patient Information. </li>
+    <li>Create a new appointment.</li>
+    <li>Edit an appointment. </li>
+    <li>Cancel an appointment.</li>
+    <li> Viewing all the appointments. </li>
+    <li>Viewing the list of all patients for a doctor. </li>
+  </ul>
+  <h4> Please use the navigation bar at the top to do the required tasks in this app. </h4>
+
+</div>
 </body>
 </html>
