User stories - Filtering doctor details by appt and patient details by appt

--- a/hospital-administration/src/main/resources/templates/appointments/index.html
+++ b/hospital-administration/src/main/resources/templates/appointments/index.html
@@ -75,10 +75,12 @@
 
 <div class="container body-content">
     <nav>
+        <h3> Summary information List.</h3>
         <ul>
             <li><a href="/appointments/view-all-appts">View all the appointments</a></li>
             <li><a href="/appointments/view-appts-by-doctor">View appointments by doctors</a></li>
             <li><a href="/appointments/view-appts-by-patient">View appointments by patients</a></li>
+<!--            <li><a href="/appointments/view-doctor-to-patient-relation">View list of all patients of a Doctor. </a></li>-->
         </ul>
     </nav>
 
